syntax="proto3";

package org.jgroups.demos;

// import "google/protobuf/any.proto";


option java_multiple_files = true;

message DemoRequest {
    string name = 1;
    int32 count = 2;
}

message DemoResponse {
    oneof one_of {
        int32 count = 1;
        string details=2;
    }
}

/*

message Quote {
    string stock = 1; // e.g. "/quotes/ibm"
    double value = 2;
}


message GetRequest {
    string stock_name = 1;
}

message GetAllRequest {

}

message SetRequest {
    Quote quote = 1;
}

message GetResponse {
    Quote quote = 1;
}

message GetAllResponse {
    repeated Quote quotes = 1;
}

message Request {
    oneof one_of {
        GetRequest    get_req     = 1;
        GetAllRequest get_all_req = 2;
        SetRequest    set_req     = 3;
    }
}

message Response {
    oneof one_of {
        GetResponse    get_rsp     = 1;
        GetAllResponse get_all_rsp = 2;
    }
}
*/

//message ResponseValue {
  //  google.protobuf.Any details = 1;
// }
